--- a/frontend/src/pages/Landing.scss
+++ b/frontend/src/pages/Landing.scss
@@ -1,10 +1,15 @@
 .landing {
     .landing-hero {
         padding: 6rem 2rem;
-        background: linear-gradient(135deg, #f7f7ff, #fafafa);
+        background: linear-gradient(135deg, #f7f7ff50, #fafafa1a);
         border-radius: var(--radius-l);
         margin-bottom: 3rem;
         border: .1rem solid var(--surface);
+        color: white;
+
+        p {
+            color: white;
+        }
 
         .landing-sub {
             margin: 1rem 0 2rem;
@@ -18,8 +23,14 @@
         >li {
             flex: 1;
             padding: 2rem;
+            background-color: #fafafa1a;
             border-radius: var(--radius-s);
             border: .1rem solid var(--border);
+            color: whitesmoke;
+
+            p {
+                color: whitesmoke;
+            }
         }
     }
 
