--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -240,7 +240,10 @@ code {
 
 .page {
     /* (기존) */
-    min-height: 100%; 
+    min-height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
   
 .page-login {
