--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,6 +1,6 @@
 .page {
     padding-top: .5rem;
-    text-align: center;
+    // text-align: center;
 
     .inner {
         max-width: 80rem;
@@ -30,6 +30,4 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: top;
-    // filter: blur(5px) brightness(0.8);
-    // opacity: 0.9;
 }
