--- a/frontend/src/components/AuthPanel.scss
+++ b/frontend/src/components/AuthPanel.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=IM+Fell+DW+Pica&display=swap');
 
-.inner {
+.inner.login {
     position: relative;
 
     // 🚨 (수정) 크기 확대 (약 110%)
