--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -5,6 +5,20 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'HancomMalrangmalrang';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2406-1@1.0/HancomMalangMalang-Regular.woff2') format('woff2');
+    font-weight: 400;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'HancomMalrangmalrang';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/2406-1@1.0/HancomMalangMalang-Bold.woff2') format('woff2');
+    font-weight: 700;
+    font-display: swap;
+}
+
 *,
 *::before,
 *::after {
@@ -27,7 +41,7 @@ body,
 }
 
 body {
-    background: var(--surface);
+    background: black;
     color: var(--text);
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
